# collection_prep

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  add_docs.py  cspell.config.yaml  jinja_utils.py  plugin.rst.j2  pyproject.toml  requirements.txt  runtime.py  setup.cfg  setup.py  update.py  update_rb.py  utils.py
.config/: dictionary.txt
collection_prep/: jinja_utils.py  utils.py
collection_prep/cmd/: add_docs.py  index.rst.j2  plugin.rst.j2  refresh_examples.py  runtime.py  set_version.py  update.py  version.py
