[metadata]
name = collection_prep
summary = Ansible collection prepartion tools
description-file =
    README.md
author = Ansible Network team
home-page = https://www.ansible.com
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3

[files]
packages = collection_prep

[entry_points]
console_scripts =
    collection_prep_add_docs = collection_prep.cmd.add_docs:main
    collection_prep_update = collection_prep.cmd.update:main
    collection_prep_runtime = collection_prep.cmd.runtime:main
    collection_prep_set_version = collection_prep.cmd.set_version:main
